Adding a dialog box and more content.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div data-role="content">
     <p>Podcasts I Lisen To</p>
     
-    <p><a href="#podcasts" title="Some of my favorite podcasts">Podcasts</a></p>
+    <p><a href="modal.html" data-rel="dialog" data-transition="slidedown" title="Let's see where we are">Podcasts</a></p>
     <p><a href="#blogs" data-direction="reverse" title="Go Back">Back to Blogs</a>
   </div><!--end content-->
   
@@ -80,6 +80,7 @@
   
   <div data-role="content">
     <p>Podcasts I Lisen To</p>
+    <p><a href="#books" data-direction="reverse" title="Go Back">Back to Books</a>
   </div><!--end content-->
   
   <div data-role="footer">
